# AILearning

./: .clangd  .gitignore  CMakeLists.txt  README.md  cours_ia.md  main.cpp  model.txt  test_ia.py  test_loading_ai.py
entrainement/: chiffre_0_1772445930046.pgm  chiffre_0_1772445980670.pgm  chiffre_0_1772445987280.pgm  chiffre_0_1772446035092.pgm  chiffre_0_1772446060140.pgm  chiffre_0_1772446065609.pgm  chiffre_0_1772446423580.pgm  chiffre_0_1772446426554.pgm  chiffre_0_1772446489556.pgm  chiffre_0_1772446537726.pgm  chiffre_0_1772447715417.pgm  chiffre_0_1772447718112.pgm  chiffre_0_1772447720701.pgm  chiffre_0_1772447748955.pgm  chiffre_0_1772447756456.pgm  chiffre_0_1772447790263.pgm  chiffre_0_1772447806227.pgm  chiffre_0_1772447868261.pgm  chiffre_0_1772447909803.pgm  chiffre_0_1772461504009.pgm  chiffre_0_1772461507362.pgm  chiffre_0_1772462524990.pgm  chiffre_0_1772462564876.pgm  chiffre_0_1772462567479.pgm  chiffre_0_1772462817433.pgm  chiffre_0_1772462878214.pgm  chiffre_0_1772462880522.pgm  chiffre_0_1772463751911.pgm  chiffre_0_1772463782292.pgm  chiffre_0_1772463809445.pgm  chiffre_0_1772463815947.pgm  chiffre_0_1772463822906.pgm  chiffre_0_1772463849707.pgm  chiffre_0_1772463872575.pgm  chiffre_0_1772463910220.pgm  chiffre_0_1772463919313.pgm  chiffre_0_1772464001274.pgm  chiffre_0_1772464106676.pgm  chiffre_0_1772464488713.pgm  chiffre_0_1772464554530.pgm  (+351 more)
src/: CEntraineur.cpp  CModel.cpp
src/include/: CEntraineur.hpp  CModel.hpp
